test-fixtures/machine-dsl-tests/tests/compile_fail/typed_state_has_no_fields_map.rs
fn main() {
    let state = meerkat_machine_kernels::generated::meerkat::initial_state();
    let _ = state.fields.get("session_id");
}
